# llizard

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  build-deploy-ble-client.sh  build-deploy-carthing.sh  build-output-for-image.sh  toolchain-armv7.cmake
docs/: sdk_media_redis_plan.md
fonts/: README.md
include/: carthing_input.h  host_input.h  llizard_plugin.h
plugins_src/: nowplaying_plugin.c.bak
plugins_src/album_art_viewer/: album_art_viewer_plugin.c
plugins_src/albums/: albums_plugin.c
plugins_src/alchemy/: alchemy_plugin.c
plugins_src/artists/: artists_plugin.c
plugins_src/bejeweled/: bejeweled_logic.c  bejeweled_logic.h  bejeweled_plugin.c
plugins_src/clock/: clock_plugin.c
plugins_src/flashcards/: flashcards_plugin.c
plugins_src/llzblocks/: llzblocks_plugin.c
plugins_src/llzsolipskier/: llzsolipskier_plugin.c
plugins_src/llzsurvivors/: llzsurvivors_game.c  llzsurvivors_game.h  llzsurvivors_plugin.c
plugins_src/llzsurvivors/web/: Makefile  README.md  build_and_deploy.sh  llz_sdk.h  llz_sdk_input.h  llz_sdk_stub.h  main_web.c  shell.html
plugins_src/lyrics/: lyrics_plugin.c
plugins_src/media_channels/: media_channels_plugin.c
plugins_src/menu_sorter/: menu_sorter_plugin.c
plugins_src/mercury/: mercury_plugin.c
plugins_src/millionaire/: millionaire_draw.h  millionaire_draw_example.c  millionaire_lifelines.c  millionaire_lifelines.h  millionaire_plugin.c  millionaire_questions.c  millionaire_questions.h  millionaire_types.h
plugins_src/nowplaying/: nowplaying_plugin.c
plugins_src/nowplaying/core/: np_effects.c  np_effects.h  np_theme.c  np_theme.h
plugins_src/nowplaying/overlays/: np_overlay_actions.c  np_overlay_actions.h  np_overlay_clock.c  np_overlay_clock.h  np_overlay_colorpicker.c  np_overlay_colorpicker.h  np_overlay_lyrics.c  np_overlay_lyrics.h  np_overlay_manager.c  np_overlay_manager.h  np_overlay_media_channels.c  np_overlay_media_channels.h  np_overlay_template.c  np_overlay_template.h
plugins_src/nowplaying/screens/: np_screen_now_playing.c  np_screen_now_playing.h
plugins_src/nowplaying/widgets/: np_widget_album_art.c  np_widget_album_art.h  np_widget_button.c  np_widget_button.h  np_widget_label.c  np_widget_label.h  np_widget_panel.c  np_widget_panel.h  np_widget_progress.c  np_widget_progress.h
plugins_src/plugin_manager/: plugin_manager_plugin.c
plugins_src/podcast/: podcast_plugin.c
plugins_src/queue/: queue_plugin.c
plugins_src/redis_status/: redis_status_plugin.c
plugins_src/settings/: settings_plugin.c
plugins_src/shapes_demo/: shapes_demo_plugin.c
plugins_src/spotify/: spotify_plugin.c
plugins_src/swipe_2048/: swipe_2048_plugin.c
scripts/: copy-carthing-fonts.sh
sdk/: README.md
sdk/include/: llz_sdk.h  llz_sdk_background.h  llz_sdk_config.h  llz_sdk_connections.h  llz_sdk_display.h  llz_sdk_font.h  llz_sdk_image.h  llz_sdk_input.h  llz_sdk_layout.h  llz_sdk_media.h  llz_sdk_navigation.h  llz_sdk_shapes.h  llz_sdk_subscribe.h
sdk/llz_sdk/: background.c  config.c  connections.c  display.c  font.c  image.c  input.c  layout.c  media.c  navigation.c  shapes.c  subscribe.c
shared/host_input/: carthing_input.c  host_input.c
shared/notifications/include/: llz_notification.h  llz_notification_types.h
shared/notifications/llz_notification/: notification.c  notification_render.c
src/: main.c  plugin_loader.c  plugin_loader.h
src/themes/core/: menu_theme.c  menu_theme_colors.c  menu_theme_fonts.c  menu_theme_helpers.c  menu_theme_scroll.c
src/themes/include/: menu_theme.h  menu_theme_private.h  menu_theme_types.h
src/themes/styles/: theme_cards.c  theme_carousel.c  theme_carthing.c  theme_grid.c  theme_list.c
src/themes/widgets/: theme_background.c  theme_header.c  theme_indicator.c  theme_item.c
supporting_projects/salamanders/: README.md
